# slackcli

./: setup.cfg  setup.py
sc/: command.py  libsc.py  list.py  main.py  show.py
