[metadata]
name = sc
summary = Command-Line for Slack
author = Hideki Saito
author-email = saito@fgrep.org

[files]
packages =
    sc

[entry_points]
console_scripts =
    sc = sc.main:main

sc.cli =
    channel_list = sc.list:ChannelList
    channel_history = sc.list:ChannelHistory
    member_list = sc.list:MemberList
    member_show = sc.show:MemberShow
    message_send = sc.command:MessagePost

#
# [EOF]
#
